--- a/src/app/ui/common/footer/footer.component.html
+++ b/src/app/ui/common/footer/footer.component.html
@@ -22,7 +22,7 @@
   
         <div class="company" fxFlex fxFlex.lt-md="none" fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="12px">
          
-          <h5 class="company-name tb-color--black-38 tb-typo--h5" ngClass.xs="xs">Designed in <span class="tb-color--black">Figma</span>. Developed in <span class="tb-color--black">Angular</span>
+          <h5 class="company-name tb-color--black-38 tb-typo--h5" ngClass.xs="xs">Developed in <span class="tb-color--black">Angular</span>
           </h5>
   
         </div>
@@ -43,7 +43,7 @@
   
       <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="start center">
         <p class="tb-cursor--pointer tb-typo--body2 tb-color--grey-500">
-          © 2019 Copyright | nirajprakash.github.io | All rights reserved.</p>
+          &copy; 2022 Copyright | santosh-shah.com | All rights reserved.</p>
         <div fxFlex> </div>
         <div class="social-area" fxLayoutGap="40px" fxLayout="row" fxLayoutAlign="center center">
            <div class="social" fxLayoutGap="40px" fxLayout="row" fxLayoutAlign="center center"
@@ -53,18 +53,18 @@
             </button> -->
   
            
-            <a class="" href="https://github.com/nirajprakash" target="_blank" matTooltip="github">
+            <a class="" href="https://github.com/Santoshah" target="_blank" matTooltip="github">
               <button mat-icon-button>
                 <mat-icon svgIcon="github" class="tb-icon--16 tb-color--grey-500"></mat-icon>
               </button>
             </a>
            
-            <a class="" href="https://www.linkedin.com/in/nirajprakash1/" target="_blank" matTooltip="linkedin">
+            <a class="" href="https://www.linkedin.com/in/cssmaniaa/" target="_blank" matTooltip="linkedin">
               <button mat-icon-button>
                 <mat-icon svgIcon="linkedin" class="tb-icon--16 tb-color--grey-500"></mat-icon>
               </button>
             </a>
-            <a class="" href="https://www.instagram.com/niraj_prakash/" target="_blank" matTooltip="instagram">
+            <a class="" href="https://www.instagram.com/cssmania/" target="_blank" matTooltip="instagram">
   
               <button mat-icon-button>
                 <mat-icon svgIcon="instagram" class="tb-icon--16 tb-color--grey-500"></mat-icon>
