--- a/src/app/ui/pages/home/home-about/home-about.component.html
+++ b/src/app/ui/pages/home/home-about/home-about.component.html
@@ -44,7 +44,7 @@
 
                     <div [@transitionText]="{value:_mTriggerAnim, params:{animDelay:300}}" fxLayout="row">
                         <div fxFlex fxLayout="column" fxLayoutGap="12" fxLayoutAlign="start start">
-                            <h2 class="title current-typo--h3-light">07+</h2>
+                            <h2 class="title current-typo--h3-light">10+</h2>
                             <h4 class="title current-typo--h6">Years of Experience</h4>
 
                         </div>
@@ -62,19 +62,19 @@
                     <div [@transitionText]="{value:_mTriggerAnim, params:{animDelay:400}}" fxLayout="row wrap"
                         fxLayoutGap="6">
                         <div class="skill tb-color-bg--black-6">
-                            <h5 class="current-typo--h5">Design</h5>
+                            <h5 class="current-typo--h5">DevOps</h5>
                         </div>
 
                         <div class="skill" style="background-color: #FFD647;">
-                            <h5 class="current-typo--h5 tb-color--black">UI/UX</h5>
+                            <h5 class="current-typo--h5 tb-color--black">AWS</h5>
                         </div>
 
                         <div class="skill" style="background-color: #F57FFF;">
-                            <h5 class="current-typo--h5 tb-color--black">Logo</h5>
+                            <h5 class="current-typo--h5 tb-color--black">GCP</h5>
                         </div>
 
                         <div class="skill" style="background-color: #6F73C3;">
-                            <h5 class="current-typo--h5 tb-color--white">Prototype</h5>
+                            <h5 class="current-typo--h5 tb-color--white">Azure</h5>
                         </div>
                     </div>
                     <div class="tb-height--8"></div>
@@ -90,11 +90,15 @@
                         </div>
 
                         <div class="skill" style="background-color: #68F17E;">
-                            <h5 class="current-typo--h5 tb-color--black">Android</h5>
+                            <h5 class="current-typo--h5 tb-color--black">JavaScript</h5>
+                        </div>
+                        
+                        <div class="skill" style="background-color: #ffcb2b;">
+                            <h5 class="current-typo--h5 tb-color--black">Firebase</h5>
                         </div>
 
                         <div class="skill" style="background-color: #027DFD;">
-                            <h5 class="current-typo--h5 tb-color--white">Flutter</h5>
+                            <h5 class="current-typo--h5 tb-color--white">Ionic</h5>
                         </div>
                     </div>
 
