--- a/src/app/ui/pages/home/home-expertise/home-expertise.component.html
+++ b/src/app/ui/pages/home/home-expertise/home-expertise.component.html
@@ -21,15 +21,15 @@
             <div fxLayout.gt-xs="row wrap" fxLayout.xs="column" fxLayoutAlign="space-between stretch">
 
                 <app-expertise-item [@transitionText]="{value:_mTriggerAnim, params:{animDelay:200}}" fxFlex.gt-xs="46"
-                    fxFlex.xs="none" [isColored]="true" jobType="Design" [parts]='["UI/UX",  "Logo" , "Prototyping"]'>
+                    fxFlex.xs="none" [isColored]="true" jobType="Website Development" [parts]='["JavaScript",  "Angular", "Firebase", "NodeJS"]'>
                 </app-expertise-item>
                 <app-expertise-item [@transitionText]="{value:_mTriggerAnim, params:{animDelay:300}}" fxFlex.gt-xs="46"
-                    fxFlex.xs="none" jobType="Android Development"
-                    [parts]='["Jetpack Compose" , "Architecture Component"]'></app-expertise-item>
+                    fxFlex.xs="none" jobType="DevsOps"
+                    [parts]='["AWS"]'></app-expertise-item>
                 <app-expertise-item [@transitionText]="{value:_mTriggerAnim, params:{animDelay:400}}" fxFlex.gt-xs="46"
-                    fxFlex.xs="none" jobType="Web Development" [parts]='[ "Angular" , "React"]'></app-expertise-item>
+                    fxFlex.xs="none" jobType="Design" [parts]='[ "Photoshop" , "Figma"]'></app-expertise-item>
                 <app-expertise-item [@transitionText]="{value:_mTriggerAnim, params:{animDelay:500}}" fxFlex.gt-xs="46"
-                    fxFlex.xs="none" jobType="Cross Platform Development" [parts]='[ "Flutter", "Jetbrain Compose"]'>
+                    fxFlex.xs="none" jobType="Cross Platform Development" [parts]='[ "Flutter", "IONIC", "Framework7"]'>
                 </app-expertise-item>
             </div>
 
