--- a/src/app/ui/pages/home/home-contact/home-contact.component.html
+++ b/src/app/ui/pages/home/home-contact/home-contact.component.html
@@ -67,7 +67,7 @@
 
             <!-- <h4 class="tb-color--black" ngClass.gt-xs="current-typo--h4" ngClass.xs="current-typo--h5">Or</h4> -->
             <div  [@transitionText]="{value:_mTriggerAnim,  params: {animDelay: 600}}" class="underline"><a class="tb-color--black" ngClass.gt-xs="current-typo--h4 " ngClass.xs="current-typo--h5"
-                    href="mailto:iamsantoshkumarshah+connect@gmail.com">iamsantoshkumarshah@gmail.com</a></div>
+                    href="mailto:isantoshah+connect@gmail.com">isantoshah@gmail.com</a></div>
 
         </div>
     </div>
