--- a/src/app/ui/pages/home/home-contact/home-contact.component.html
+++ b/src/app/ui/pages/home/home-contact/home-contact.component.html
@@ -52,7 +52,8 @@
 
             </div>
 
-            <div ngClass.gt-xs="tb-height--36" ngClass.xs="tb-height--20"></div>
+            <div ngClass.gt-xs="tb-height--3
+            6" ngClass.xs="tb-height--20"></div>
             <h4 [@transitionText]="{value:_mTriggerAnim,  params: {animDelay: 400}}" class="tb-color--black" ngClass.gt-xs="current-typo--h4" ngClass.xs="current-typo--h5">Or</h4>
 
 
